# ScreenController

./: .gitmodules  BufferWriter.h  CMakeLists.txt  Command.cpp  Command.h  CommandMessage.cpp  CommandMessage.h  EventHandler.cpp  EventHandler.h  Frame.h  FrameExtractor.cpp  FrameExtractor.h  ImageConverterInterface.h  JpegConverter.cpp  JpegConverter.h  KeyInterface.cpp  KeyInterface.h  LicenseType.h  LockFreeRingBuffer.cpp  LockFreeRingBuffer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MouseInterface.cpp  MouseInterface.h  NodeListView.cpp  NodeListView.h  NodeModel.cpp  NodeModel.h  NodeNameDialog.cpp  NodeNameDialog.h  NodeNameDialog.ui  PreviewDialog.cpp  PreviewDialog.h  PreviewDialog.ui  README.md  RegionMapper.cpp  RegionMapper.h  ScreenStreamer.cpp  ScreenStreamer.h  (+26 more)
